--- a/index.html
+++ b/index.html
@@ -5,16 +5,15 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Test Site</title>
     <link rel="stylesheet" href="styles.css">
+    <link href="https://fonts.googleapis.com/css2?family=Kumbh+Sans:wght@100..900&display=swap" rel="stylesheet">
 </head>
-<!-- Navbar Section -->
 <body>
+    <!-- Navbar Section -->
     <nav class="navbar">
         <div class="navbar__container">
             <a href="/" id="navbar__logo">Test Site</a>
             <div class="navbar__toggle" id="mobile-menu">
-                <span class="bar"></span>
-                <span class="bar"></span>
-                <span class="bar"></span>
+                <span class="bar"></span> <span class="bar"></span> <span class="bar"></span>
             </div>
             <ul class="navbar__menu">
                 <li class="navbar__item">
@@ -29,8 +28,20 @@
             </ul>
         </div>
     </nav>
-    <script> src="app.js" </script>
+    <!-- Hero Section -->
+    <div class="main">
+        <div class="main__container">
+            <div class="main__content">
+                <h1>Slogan</h1>
+                <h2>Heading </h2>
+                <p>About Us</p>
+                <button class="main__btn"><a href="/">Starting</a></button>
+            </div>
+            <div class="main__img--container">
+                <img src="Images/pic1.svg" alt="pic" id="main__img">
+            </div>
+        </div>
+    </div>
+    <script src="app.js"></script>
 </body>
-
-
 </html>
