--- a/index.html
+++ b/index.html
@@ -28,6 +28,7 @@
             </ul>
         </div>
     </nav>
+
     <!-- Hero Section -->
     <div class="main">
         <div class="main__container">
@@ -39,6 +40,57 @@
             </div>
             <div class="main__img--container">
                 <img src="Images/pic1.svg" alt="pic" id="main__img">
+            </div>
+        </div>
+    </div>
+
+    <!-- Servivce Section -->
+    <div class="services">
+        <h1>Text 1</h1>
+        <div class="services__container">
+            <div class="services__card">
+                <h2>Text 2</h2>
+                <p>Text 3</p>
+                <button>Get Started</button>
+            </div>
+            <div class="services__card">
+                <h2>Text 4</h2>
+                <p>Text 5</p>
+                <button>Get Started</button>
+            </div>
+        </div>
+    </div>
+
+    <!-- Footer Section -->
+    <div class="footer__container">
+        <div class="footer__links">
+            <div class="footer__link--wrapper">
+                <div class="footer__link--items">
+                    <h2>About Us</h2>
+                    <a href="/tech.html">Info 1</a>
+                    <a href="/tech.html">Info 2</>
+                    <a href="/tech.html">Terms and Services</a>
+                </div>
+                <div class="footer__link--items">
+                    <h2>About Us</h2>
+                    <a href="/tech.html">Info 1</a>
+                    <a href="/tech.html">Info 2</>
+                    <a href="/tech.html">Terms and Services</a>
+                </div>
+            </div>
+            <div class="footer__link--wrapper">
+                <div class="footer__link--items">
+                    <h2>About Us</h2>
+                    <a href="/tech.html">Info 1</a>
+                    <a href="/tech.html">Info 2</>
+                    <a href="/tech.html">Terms and Services</a>
+                </div>
+                <div class="footer__link--items">
+                    <h2>About Us</h2>
+                    <a href="/">Info 1</a>
+                    <a href="/">Info 2</>
+                    <a href="/">Terms and Services</a>
+                </div>
             </div>
         </div>
     </div>
