--- a/index.html
+++ b/index.html
@@ -72,24 +72,10 @@
                     <a href="/tech.html">Terms and Services</a>
                 </div>
                 <div class="footer__link--items">
-                    <h2>About Us</h2>
+                    <h2>Contact Us</h2>
                     <a href="/tech.html">Info 1</a>
                     <a href="/tech.html">Info 2</>
-                    <a href="/tech.html">Terms and Services</a>
-                </div>
-            </div>
-            <div class="footer__link--wrapper">
-                <div class="footer__link--items">
-                    <h2>About Us</h2>
-                    <a href="/tech.html">Info 1</a>
-                    <a href="/tech.html">Info 2</>
-                    <a href="/tech.html">Terms and Services</a>
-                </div>
-                <div class="footer__link--items">
-                    <h2>About Us</h2>
-                    <a href="/">Info 1</a>
-                    <a href="/">Info 2</>
-                    <a href="/">Terms and Services</a>
+                    <a href="/tech.html">Social Media</a>
                 </div>
             </div>
         </div>
